# ml-research

./: .gitignore  README.md
bert-bash-classifier/: README.md  finetune.ipynb  pyproject.toml
lfm-sparse-autoencoders/: README.md  lfm25-math-refusal-steering.ipynb  lfm25-sae-eval.ipynb  lfm25-sae-training.ipynb  pyproject.toml  train_sae.py
qwen-sparse-autoencoders/: README.md  anger_feature_inspection.txt  anger_residual_layer_sweep.txt  anger_steering_with_penalty.txt  output.txt  pyproject.toml  qwen.ipynb
scaling-laws/: README.md
