[project]
name = "lfm-sparse-autoencoders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.22.0",
    "ipykernel>=7.3.0",
    "numpy>=2.5.1",
    "sae-lens>=6.45.3",
    "safetensors>=0.8.0",
    "torch>=2.13.0",
    "transformers>=5.4",
]
